--- a/WarmingUpWithUIKit/WarmingUpWithUIKit/Base.lproj/Main.storyboard
+++ b/WarmingUpWithUIKit/WarmingUpWithUIKit/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rfE-OJ-Xac">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JYe-3t-asb">
     <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
@@ -102,6 +102,46 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="maR-ZA-sRR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="891.62790697674416" y="2.5751072961373391"/>
+        </scene>
+        <!--My Table View Controller-->
+        <scene sceneID="8Rb-UP-sGZ">
+            <objects>
+                <viewController id="JYe-3t-asb" customClass="MyTableViewController" customModule="WarmingUpWithUIKit" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Q2L-SR-bWk">
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="KPl-Rx-Slc">
+                                <rect key="frame" x="0.0" y="59" width="430" height="839"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" id="UVP-dR-uWa">
+                                        <rect key="frame" x="0.0" y="50" width="430" height="44.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UVP-dR-uWa" id="y8b-wV-Zdp">
+                                            <rect key="frame" x="0.0" y="0.0" width="430" height="44.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="QVU-qp-qFK"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="QVU-qp-qFK" firstAttribute="trailing" secondItem="KPl-Rx-Slc" secondAttribute="trailing" id="c4P-dh-0hf"/>
+                            <constraint firstItem="KPl-Rx-Slc" firstAttribute="top" secondItem="QVU-qp-qFK" secondAttribute="top" id="dW4-3N-sec"/>
+                            <constraint firstItem="KPl-Rx-Slc" firstAttribute="leading" secondItem="QVU-qp-qFK" secondAttribute="leading" id="ibr-42-XTr"/>
+                            <constraint firstItem="QVU-qp-qFK" firstAttribute="bottom" secondItem="KPl-Rx-Slc" secondAttribute="bottom" id="rh7-xg-Qcv"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="myTableView" destination="KPl-Rx-Slc" id="Tbf-U2-BC0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xA8-zX-y8h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1656" y="3"/>
         </scene>
     </scenes>
     <resources>
